--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
     <title>My Form</title>
 </head>
 <body>
-    
+    <form action="made/samewhere.use">
+        <label for="fname">Enter FirstName :</label>
+        <input type="text" name="fname" id="fname">
+        <label for="lname">Enter LastName :</label>
+        <input type="text" name="lname" id="lname">
+        <label for="email">Email : </label>
+        <input type="email" name="email" id="email">
+        <label for="mnum">Mobile Number :</label>
+        <input type="number" name="mnum" id="mnum">
+        <label for="dob">Date of Birth</label>
+        <input type="date" name="dob" id="dob">
+        <select name="category" id="category" disabled="Enter Type">
+            <option value="male">Male</option>
+            <option value="female">Female</option>
+            <option value="cantsay">Can't Say</option>
+        </select>
+        <input type="submit" value="formhere">
+    </form>
 </body>
 </html>
