--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Form</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <form action="made/samewhere.use">
@@ -17,7 +18,8 @@
         <input type="number" name="mnum" id="mnum">
         <label for="dob">Date of Birth</label>
         <input type="date" name="dob" id="dob">
-        <select name="category" id="category" disabled="Enter Type">
+        <select name="category" id="category">
+            <option value="sg" disabled selected>Select Gender</option>
             <option value="male">Male</option>
             <option value="female">Female</option>
             <option value="cantsay">Can't Say</option>
