added css and updated html

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
         <label for="email">Email : </label>
         <input type="email" name="email" id="email">
         <label for="mnum">Mobile Number :</label>
-        <input type="number" name="mnum" id="mnum">
+        <input type="text" name="mnum" id="mnum" maxlength="13">
         <label for="dob">Date of Birth</label>
         <input type="date" name="dob" id="dob">
+        <label for="Gender">Gender</label>
         <select name="category" id="category">
             <option value="sg" disabled selected>Select Gender</option>
             <option value="male">Male</option>
